# flexiron-source

./: .gitignore  .gitignore prod  .rooignore  CLAUDE.md  MANUAL_CHECKLIST.md  README.md  ROO.md  session-summary-and-next-prompt.md
backend/: .env  .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: _alembic_imports.py  env.py
backend/alembic/versions/: 133fae13afbe_phase_5_uploads.py  15f2c7d4e9b0_enlarge_logo_url_to_text.py  3a0b5d31bde7_phase_1_tenants_auth_users_sessions.py  4e8c9a3f1b2d_add_secret_link_token_to_users.py  57ba67dda78c_phase_2_settings.py  64f1eca13a01_add_vat_code_to_tenant.py  7bf1730620f0_phase_11_notifications.py  8cf3bfa380dd_phase_12_plans_multi_role.py  a1b2c3d4e5f6_phase_15_product_uom_restructure.py  a8dd7d7ba74b_phase_6_suppliers.py  b2619dfeb90f_phase_10_finance.py  bbd27a3881a5_phase_14_add_currency_uom_fk_to_products.py  d730d0aa32ef_phase_4_services.py  e24a3922ed01_phase_7_config.py  f96e6fb2d5cf_phase_8_bcc.py  fd0ecc1269df_phase_9_warehouse.py
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 25245d4bf874_phase_3_categories_products.py  57ba67dda78c_phase_2_settings.py  7bf1730620f0_phase_11_notifications.py  a8dd7d7ba74b_phase_6_suppliers.py  (+4 more)
backend/app/core/: config.py  database.py  exceptions.py  schemas.py
backend/app/models/: __init__.py  auth.py  base.py  bcc.py  category.py  config.py  finance.py  notification.py  product.py  service.py  settings.py  supplier.py  upload.py  warehouse.py
backend/app/modules/: __init__.py
(+979 files in other folders)
